--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ The temperature is much lower than usually used for cooking, typically around 55
         <a href="https://en.wikipedia.org/wiki/Sous_vide"> more about sous vide...</a>
         <h2>This is why this is my favorite cooking method</h2>
         <p>It's important to note that this method is not conducive to having a good marriage, especially when your wife is a hungry... and doesn't want to wait for 24 hours for her meal.  <em>But</em> it's fun to see my family lose their minds waiting for their food.</p>
-        <p>However, with a little planning, no one dies or, and more importantly, has to wait....and steaks, chicken, pork all end up being super moist, and comparable to any high end restaurant.</p>
+        <p>However, with a little planning, no one dies or, and more importantly, has to wait....and steaks, chicken, pork all end up being super moist, and comparable to any high-end restaurant.</p>
         <ul>
             <li>consistent results</li>
             <li>consistent presentation</li>
