content clean-up

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
 The temperature is much lower than usually used for cooking, typically around 55 to 60 °C (130 to 140 °F) for red meat, 66 to 71 °C (150 to 160 °F) for poultry, and higher for vegetables. The intent is to cook the item evenly, ensuring that the inside is properly cooked without overcooking the outside, and to retain moisture.</blockquote></p>
         <a href="https://en.wikipedia.org/wiki/Sous_vide"> more about sous vide...</a>
-        <h2>This is why this is my favorite cooking method</h2>
-        <p>It's important to note that this method is not conducive to having a good marriage, especially when your wife is a hungry... and doesn't want to wait for 24 hours for her meal.  <em>But</em> it's fun to see my family lose their minds waiting for their food.</p>
-        <p>However, with a little planning, no one dies or, and more importantly, has to wait....and steaks, chicken, pork all end up being super moist, and comparable to any high-end restaurant.</p>
+        <h2>Why Sous Vide is my favorite cooking method</h2>
+        <p>It's absolutely delicious!  If you've ever eaten a chicken sandwhich at Shake Shack, and wondered how they got the chicken to be perfectly moist, Sous Vide is the answer.  However, it's important to note that not everything great comes without a cost.  Chicken breast takes about 2 hours using this method, a brisquet can take 48 hours.  So, depending on the frequency of use, Sous Vide may not be conducive maintaining a good marriage, especially when your wife is starving... and doesn't want to wait 24 hours to be fed.  <em>But</em> it can be entertaining to watch your family descend into a chaotic mess whilst waiting for their food.</p>
+        <p>However, with a little planning, no one dies or, and more importantly, no one has to wait. You'll be excited to find that steaks, chicken, pork all end up being super moist, and comparable to any menu offering at high-end restaurants.</p>
+        <h2> Main benefits</h2>
         <ul>
             <li>consistent results</li>
             <li>consistent presentation</li>
