--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ The temperature is much lower than usually used for cooking, typically around 55
         <a href="https://en.wikipedia.org/wiki/Sous_vide"> more about sous vide...</a>
         <h2>Why Sous Vide is my favorite cooking method</h2>
         <p>It's absolutely delicious!  If you've ever eaten a chicken sandwhich at Shake Shack, and wondered how they got the chicken to be perfectly moist, Sous Vide is the answer.  However, it's important to note that not everything great comes without a cost.  Chicken breast takes about 2 hours using this method, a brisquet can take 48 hours.  So, depending on the frequency of use, Sous Vide may not be conducive to maintaining a good marriage, especially when your wife is starving... and doesn't want to wait 24 hours to be fed.  <em>But</em> it can be entertaining to watch your family descend into a chaotic mess whilst waiting for their food.</p>
-        <p>However, with a little planning, no one dies, and more importantly, no one has to wait. You'll be excited to find that steaks, chicken, and pork all end up being super moist, and pleasentl comparable to any menu offering at high-end restaurants. Even Octopus which can have the texture and consistency of a rubber tire, turns out being consistently agreeable. </p>
+        <p>However, with a little planning, no one dies, and more importantly, no one has to wait. You'll be excited to find that steaks, chicken, and pork all end up being super moist, and pleasently comparable to any menu offering at high-end restaurants. Even Octopus which can have the texture and consistency of a rubber tire, turns out being consistently agreeable. </p>
         <h2> Main benefits</h2>
         <ul>
             <li>consistent results</li>
